Added average score functionality

--- a/moviePage/index.html
+++ b/moviePage/index.html
@@ -19,6 +19,10 @@
                 <div class="showDescription">
                     Teen drama based on a graphical novel following a young romance.
                 </div>
+                <br>
+                <div class="showDescription" id="showRating">
+                    <span>Average rating:</span>
+                </div>
             </div>
         </div>
         <h2>Reviews</h2>
